PDL integrasjon hentIdenter
Nødvendig med:
-bruk av --enable-preview for records
-versjon av Jackson >= 2.12 for å støtte records