@@ -66,6 +66,7 @@
         <logstash.version>6.6</logstash.version>
         <hikaricp.version>3.3.0</hikaricp.version>
         <ibmmq.version>9.0.5.0</ibmmq.version>
+        <jackson.version>2.12.2</jackson.version>
         <javax.ws.rs-api.version>2.1</javax.ws.rs-api.version>
         <json-smart.version>2.3</json-smart.version>
         <jms-api.version>2.0.1</jms-api.version>
@@ -185,7 +186,7 @@
             <dependency>
                 <groupId>com.fasterxml.jackson</groupId>
                 <artifactId>jackson-bom</artifactId>
-                <version>${jackson-bom.version}</version>
+                <version>${jackson.version}</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -637,7 +638,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
-                        <argLine>-Xms256m -Dfile.encoding=UTF-8</argLine>
+                        <argLine>-Xms256m -Dfile.encoding=UTF-8 --enable-preview</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -671,6 +672,7 @@
                 <configuration>
                     <release>${java.version}</release>
                     <encoding>UTF-8</encoding>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
